<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".login.SignIn">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/ic_logo_full" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/str_Login_title"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/str_email"
            app:boxStrokeColor="@color/colorAccent"
            app:errorIconDrawable="@null"
            app:errorTextAppearance="@style/error"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            app:errorIconDrawable="@null"
            app:errorTextAppearance="@style/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_bad"
            android:fontFamily="sans-serif"
            android:text="@string/str_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/str_new_account"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <at.markushi.ui.CircleButton
                android:id="@+id/btnGoogle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_google"
                app:cb_color="@color/colorPrimary"
                app:cb_pressedRingWidth="8dip" />

            <at.markushi.ui.CircleButton
                android:id="@+id/btnFacebook"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_facebook"
                app:cb_color="@color/colorPrimary"
                app:cb_pressedRingWidth="8dip" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btnLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_back_black_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>